--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
-(ini hapus aja , Jangan lupa subscribe lemes aku cuk)
+
 
 
 {
-	"ip":"vanevo.aternos.me",
+	"ip":"CercaN.aternos.me",
 	"port": "25565",
-	"name": "boboserver",
+	"name": "BOT GABUT",
 	"auto-night-skip":"false"
 }
